# Cube-roll-dungeon-crawler

./: CMakeLists.txt  CMakeLists_original.txt  Meeting-notes.md  README.md  git_test.txt  test_instructions
libs/SFML-2.5.1_build/: CMakeCache.txt  Makefile  SFMLSharedTargets.cmake  SFMLStaticTargets.cmake  cmake_install.cmake
libs/SFML-2.5.1_build/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
libs/SFML-2.5.1_build/src/SFML/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build/src/SFML/Audio/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build/src/SFML/Graphics/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build/src/SFML/Network/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build/src/SFML/System/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build/src/SFML/Window/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build_static/: CMakeCache.txt  Makefile  SFMLStaticTargets.cmake  cmake_install.cmake
libs/SFML-2.5.1_build_static/src/SFML/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build_static/src/SFML/Audio/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build_static/src/SFML/Graphics/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build_static/src/SFML/Network/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build_static/src/SFML/System/: Makefile  cmake_install.cmake
libs/SFML-2.5.1_build_static/src/SFML/Window/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  TEST_Atte.cpp  TEST_Binh.cpp  TEST_EXAMPLE.cpp  TEST_Elias.cpp  TEST_Selin.cpp  dungeonleveltest.cpp  inventoryslot.cpp  inventoryslot.hpp  main.cpp  random_test.cpp  sfml-app  textures.cpp
src/Characters/: character.cpp  character.hpp  characterplayer.cpp  characterplayer.hpp  enemy.cpp  enemy.hpp  inventoryslot.hpp
src/Characters/Allies/: ATTE_CMakeTest.hpp  ally.hpp  spirit.cpp  spirit.hpp
src/Characters/Enemies/: enemy.hpp
src/Characters/Enemies/EnemyTypes/: rat.hpp  skeleton.hpp  slime.cpp
src/DungeonGeneration/: dungeonlevel.cpp  dungeonlevel.hpp  dungeonroom.cpp  dungeonroom.hpp  dungeontile.cpp  dungeontile.hpp
src/DungeonGeneration/DungeonTiles/: doortile.cpp  doortile.hpp  dungeontile.cpp  dungeontile.hpp  enemytile.cpp  floortile.cpp  floortile.hpp  levelentrance.cpp  levelentrance.hpp  levelexit.cpp  levelexit.hpp  loottile.cpp  loottile.hpp  pit.cpp  pit.hpp  pittile.hpp  traptile.cpp  walltile.cpp  walltile.hpp
src/DungeonGeneration/RoomStorage/: readme
src/DungeonGeneration/RoomStorage/1DoorRooms/: 1.txt  2.txt  3.txt  5.txt  TestRoom1door.txt
src/DungeonGeneration/RoomStorage/2DoorRoomsCorner/: 1.txt  2.txt  3.txt  TestRoom2doorsCorner.txt
src/DungeonGeneration/RoomStorage/2DoorRoomsOpposite/: 1.txt  12.txt  13.txt  2.txt  3.txt  4.txt  TestRoom2doorsOpposite.txt
src/DungeonGeneration/RoomStorage/3DoorRooms/: 1.txt  2.txt  3.txt  TestRoom3doors.txt
src/DungeonGeneration/RoomStorage/4DoorRooms/: 1.txt  TestRoom4doors.txt
src/Graphics/: spritecontainer.hpp
src/Graphics/fonts/: fff-forward.regular.ttf:Zone.Identifier
src/Inventory/: inventoryslot.cpp  inventoryslot.hpp
src/Items/: item.cpp  item.hpp  meleeweapons.cpp  meleeweapons.hpp  potions.cpp  potions.hpp  rangedweapons.cpp  rangedweapons.hpp  shields.cpp  shields.hpp  spells.cpp  spells.hpp
src/Items/ItemTypes/MeleeWeapons/: dagger.hpp  greatsword.cpp  meleeweapon.hpp  shortsword.hpp
src/Items/ItemTypes/Potions/: hastepotion.hpp  potion.cpp
src/Items/ItemTypes/Shields/: heatershield.hpp  shield.hpp
src/Items/ItemTypes/Spells/: pushspell.cpp  spell.cpp
src/Items/MeleeWeapons/: axe.cpp  axe.hpp  dagger.cpp  dagger.hpp  greatsword.cpp  greatsword.hpp  longsword.cpp  longsword.hpp  mace.cpp  meleeweapon.cpp  meleeweapon.hpp  shortsword.cpp  shortsword.hpp
src/Items/Potions/: hastepotion.cpp  hastepotion.hpp  healthpotion.cpp  healthpotion.hpp  potion.cpp  potion.hpp  spiritpotion.cpp  staminapotion.cpp
src/Items/RangedWeapons/: javelin.hpp  rangedweapon.hpp  sling.hpp
src/Items/Shields/: kiteshield.cpp  roundshield.hpp  towershield.hpp
src/Items/Spells/: swappingspell.cpp
tests/: dungeonleveltest.cpp  main_test.cpp
